fixing z-index conflict with header, menu and contactText

--- a/components/sections/Hero/Hero.module.css
+++ b/components/sections/Hero/Hero.module.css
@@ -268,7 +268,7 @@
 
   .contactText {
     top: 97vh;
-    z-index: 20;
+    z-index: 6;
   }
   .tagline {
     width: 64%;
